--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,15 @@ language: php
 php:
     - 5.3
     - 5.4
+    - 5.5
 
 before_script:
-    - composer install
+    - composer install --dev --no-interaction
+
+script:
+    - mkdir -p build/logs
+    - php vendor/bin/phpunit -c phpunit.xml.dist --coverage-clover build/logs/clover.xml
+
+after_script:
+    - php vendor/bin/coveralls -v
 
